--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Homepage</h1>
-    <a href="https://www.theodinproject.com/about" target="_blank">About The Odin Project</a>
+    <a href="https://www.theodinproject.com/about" target="_blank" rel="noreferrer">About The Odin Project</a>
 </body>
 </html>
