--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Homepage</h1>
-    <a href="https://www.theodinproject.com/about" target="_blank" rel="noreferrer">About The Odin Project</a>
+    <a href="https://www.theodinproject.com/about" target="_blank" rel="noreferrer">About The Odin Project</a><br>
+    <a href="pages/about.html">About</a> <br>
+    <img src="./pages/dog.jpg" width="200" height="300">
 </body>
 </html>
